@@ -33,6 +33,7 @@
 - remove obsolete comment in auto.net.
 - fix macro usage in lookup_program.c.
 - fix gcc5 complaints.
+- remove unused offset handling code.
 
 28/03/2014 autofs-5.0.9
 =======================
